@@ -180,8 +180,7 @@ nodist_search_src =
 # Common to all binaries:
 common_ldadd = \
 @BZLIB_LIBS@ \
-$(LTLIBINTL)
-# The non-libtool variant $(LIBINTL) does not work on Mac OS X
+$(LIBINTL)
 
 common_src = \
 main/main.h \
