@@ -10,6 +10,7 @@
 	  output can be reread.
 	- Fix segfault of <markedversions:*> without pipe argument, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=307479
+	- Introduce eix-test-obsolete [no-]buildtime
 	- Reintroduce libtool as it is required on Mac OS X, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=305737
 	  Thanks to Stuart Shelton <srcshelton at gmail.com> for testing.
